After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769757 - rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a full queue.
rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.9.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-11 17:41 UTC by GstBlub
Modified: 2016-09-30 07:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a full queue. (1.18 KB, patch)
2016-08-11 17:41 UTC, GstBlub
committed Details | Review

Description GstBlub 2016-08-11 17:41:48 UTC
Created attachment 333130 [details] [review]
rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a full queue.

I believe there is a bug calculating the next_seqnum field when drop-on-latency is set to TRUE.  I believe that it doesn't take into account cases when more than one packet was considered definitely lost (ITEM_TYPE_LOST with a count > 1).  As I don't use this feature, I haven't verified this, but it does seem inconsistent.
Comment 1 Olivier Crête 2016-09-14 23:51:08 UTC
Merged:

commit 567afdd4d3f2fa07fecf4c02a7eca70f7a7ef7f7
Author: Thomas Bluemel <tbluemel@control4.com>
Date:   Thu Aug 11 11:04:22 2016 -0600

    rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a full queue.
    
    Fixes calculating the next sequence number when a ITEM_TYPE_LOST with more than one
    definitely lost packets is encountered.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=769757