rtpjitterbuffer: Fix calculating next_seqnum when dropping old buffers from a full queue.

Fixes calculating the next sequence number when a ITEM_TYPE_LOST with more than one
definitely lost packets is encountered.

https://bugzilla.gnome.org/show_bug.cgi?id=769757